hphp/hack/test/typecheck/exponential_2.php
<?hh

function error(): void {
  $c = false ** 10;
}
